# ChangeLog for kde-base/kdeaccounts-plugin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccounts-plugin/ChangeLog,v 1.42 2009/12/10 14:36:22 fauli Exp $

  10 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  kdeaccounts-plugin-4.3.3.ebuild:
  x86 stable, bug 292455

*kdeaccounts-plugin-4.3.4 (01 Dec 2009)

  01 Dec 2009; Alex Alexander <wired@gentoo.org>
  +kdeaccounts-plugin-4.3.4.ebuild:
  Version bump

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org>
  kdeaccounts-plugin-4.3.3.ebuild:
  Marked ppc/ppc64 stable for bug #292455.

  29 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  kdeaccounts-plugin-4.3.3.ebuild:
  amd64 stable wrt #292455

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeaccounts-plugin-4.3.2.ebuild:
  Drop KDE 4.3.2

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeaccounts-plugin-4.2.4.ebuild:
  Drop KDE 4.2.4

*kdeaccounts-plugin-4.3.3 (02 Nov 2009)

  02 Nov 2009; Alex Alexander <wired@gentoo.org>
  +kdeaccounts-plugin-4.3.3.ebuild:
  Version bump

  18 Oct 2009; Markus Meier <maekke@gentoo.org>
  kdeaccounts-plugin-4.3.1.ebuild:
  x86 stable, bug #287697

  10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  kdeaccounts-plugin-4.3.1.ebuild:
  amd64 stable wrt #287697

  08 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeaccounts-plugin-4.3.0.ebuild:
  Drop KDE 4.3.0

*kdeaccounts-plugin-4.3.2 (06 Oct 2009)

  06 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org>
  +kdeaccounts-plugin-4.3.2.ebuild:
  Version bump

*kdeaccounts-plugin-4.3.1 (01 Sep 2009)

  01 Sep 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdeaccounts-plugin-4.3.1.ebuild:
  Version bump

*kdeaccounts-plugin-4.3.0 (04 Aug 2009)

  04 Aug 2009; Alex Alexander <wired@gentoo.org>
  +kdeaccounts-plugin-4.3.0.ebuild:
  Version bump

  14 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeaccounts-plugin-4.2.3.ebuild:
  Drop KDE 4.2.3
